Cambios de entidad Disciplina y Asistencias